--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-ecommerce",
+  "name": "server",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -9,21 +9,21 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
+  "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.3.8",
-    "@strapi/plugin-users-permissions": "4.3.8",
-    "@strapi/strapi": "4.3.8",
-    "better-sqlite3": "7.4.6",
-    "stripe": "^10.8.0"
+    "@strapi/strapi": "4.8.1",
+    "@strapi/plugin-users-permissions": "4.8.1",
+    "@strapi/plugin-i18n": "4.8.1",
+    "better-sqlite3": "8.0.1"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "e4a2f37f-046f-472f-bff8-c63d7aa6e85c"
+    "uuid": "64c35732-8752-4e37-baae-1923d4ea08b1"
   },
   "engines": {
-    "node": ">=14.19.1 <=16.x.x",
+    "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
